Color is now a hex value
