# LunchFinder/Server/src/Tags/Tag.cs
@@ -3,32 +3,35 @@
 using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Drawing;
+using Extensions;
 
 /// <summary>
-///     Represents a tag
+/// Represents a tag
 /// </summary>
 public class Tag
 {
     /// <summary>
-    ///     ID generated by the database
+    /// ID generated by the database
     /// </summary>
     [DatabaseGenerated(DatabaseGeneratedOption.Identity)]
     public int Id { get; set; }
 
     /// <summary>
-    ///     Display name of the tag
+    /// Display name of the tag
     /// </summary>
     [MaxLength(50)]
     public required string Name { get; set; }
 
     /// <summary>
-    ///     Description of the tag
+    /// Description of the tag
     /// </summary>
     [MaxLength(500)]
     public string Description { get; set; } = string.Empty;
 
     /// <summary>
-    ///     The color the tag should be rendered in
+    /// The color the tag should be rendered with
+    /// In hex format
     /// </summary>
-    public required Color Color { get; set; } = Color.Blue;
+    [Length(7, 8)]
+    public required string Color { get; set; } = System.Drawing.Color.CadetBlue.ToHex();
 }
